Fix missing footer images and logo path
- Copy ic_phone_call.png to phone_call.png for footer compatibility
- Copy ic_video_call.png to video_call.png for footer compatibility
- Update logo path from /images/SoberLivingAppIcon.png to /images/brand/sober-living-app-icon.png
- All footer icons now properly display
- Build completes successfully with 912 pages generated

--- a/vercel.json
+++ b/vercel.json
@@ -176,6 +176,16 @@
       "permanent": true
     },
     {
+      "source": "/search",
+      "destination": "/blog",
+      "permanent": true
+    },
+    {
+      "source": "/search.html",
+      "destination": "/blog",
+      "permanent": true
+    },
+    {
       "source": "/sober-living-app-blog/category/(?<category>[^/]+).html",
       "destination": "/blog?category=$category",
       "permanent": true
