--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,5 +1,5 @@
 # Redirects generated from src/data/redirects.ts
-# Generated on 2025-07-28T01:21:42.018Z
+# Generated on 2025-07-28T03:13:02.741Z
 
 RewriteEngine On
 
@@ -43,6 +43,8 @@ RewriteRule ^admission.html$ /features/admissions [R=301,L]
 RewriteRule ^features-overview.html$ /features [R=301,L]
 RewriteRule ^blog.html$ /blog [R=301,L]
 RewriteRule ^sober-living-app-blog.html$ /blog [R=301,L]
+RewriteRule ^search$ /blog [R=301,L]
+RewriteRule ^search.html$ /blog [R=301,L]
 RewriteRule ^sober-living-app-blog\/category\/([^/]+).html$ /blog?category=category [R=301,L]
 RewriteRule ^sober-living-app-blog\/tag\/([^/]+).html$ /blog?tag=tag [R=301,L]
 RewriteRule ^sober-living-app-blog?author=([^/]+).html$ /blog?author=author [R=301,L]
