--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "fuse.js": "^7.1.0",
     "glob": "^10.4.5",
     "lucide-react": "^0.526.0",
+    "posthog-js": "^1.258.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.1",
@@ -46,6 +47,7 @@
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
     "@shadcn/ui": "^0.0.4",
+    "playwright": "^1.54.1",
     "terser": "^5.43.1",
     "typescript": "^5.8.3"
   }
