Update Netlify config, feature content, and base layout
- Update netlify.toml with improved deployment configuration
- Enhance billing, housing, and operations feature content
- Update BaseLayout.astro with better performance and user experience
- Update SEO redirects in .htaccess and _redirects for better URL handling
- All changes ready for production deployment with enhanced functionality

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,13 @@
 [build.environment]
   NODE_VERSION = "18"
 
+# Set the URL for staging deployments
+[context.deploy-preview.environment]
+  URL = "https://soberlivingappcom.netlify.app"
+
+[context.branch-deploy.environment]
+  URL = "https://soberlivingappcom.netlify.app"
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
