--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@astrojs/check": "^0.9.4",
     "@shadcn/ui": "^0.0.4",
     "playwright": "^1.54.1",
+    "puppeteer": "^24.15.0",
     "terser": "^5.43.1",
     "typescript": "^5.8.3"
   }
